--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,13 @@
 </head>
 <body>
 
+  <% if member_signed_in? %>
+      <%= render "shared/logged_in_header" %>
+    <% else %>
+      <%= render "shared/logged_out_header" %>
+    <% end %>
+    
+
     <% unless notice.blank? %>
       <%= notice %>
     <% end %>
@@ -15,6 +22,9 @@
     <% unless alert.blank? %>
        <%= alert %>
     <% end %>
+
+
+
 
 <%= yield %>
 
