added ffaker & factorygirl

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,10 @@
 <p> Welcome to Better Than Airbnb </p>
 <%= link_to "Become A Host", new_member_registration_path %>
 
+<p><button id-"modal-link">Kirk Quote</button></p>
+  <div id="modal-background">
+     <div id="modal-window">
+         <p class="modal-text">Beam me up, Scotty!</p>
+         <a href="#" class="close">Close</a>
+    </div>
+  </div>
